[gd_scene load_steps=22 format=3 uid="uid://cwtagae14vq5y"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_b7mht"]
[ext_resource type="Texture2D" uid="uid://bdd43yc7lc5wb" path="res://assets/MainMenu/cltCrossing.png" id="1_i5jbs"]
[ext_resource type="PackedScene" uid="uid://prh35jb6tjtd" path="res://actors/models/sophia/sophia_skin.tscn" id="1_l3jwp"]
[ext_resource type="FontFile" uid="uid://hox1dvuh7dck" path="res://assets/Fonts/prstart.ttf" id="1_ug4lg"]
[ext_resource type="Shader" path="res://assets/shaders/pixelart.gdshader" id="3_chnun"]
[ext_resource type="PackedScene" uid="uid://d0xdck6r5nd18" path="res://assets/MainMenu/credits.tscn" id="5_dq443"]
[ext_resource type="Texture2D" uid="uid://ckukhwxmi4h20" path="res://assets/Texturas/anime_skybox.jpg" id="6_nkuyu"]
[ext_resource type="PackedScene" uid="uid://b0uk80rfx2vb3" path="res://scenes/mapa.tscn" id="7_15tsw"]
[ext_resource type="PackedScene" uid="uid://40nk34m1jr3e" path="res://assets/MainMenu/controls.tscn" id="8_r32lb"]
[ext_resource type="AudioStream" uid="uid://byf6bpxuxwx4e" path="res://music/menu_sfx.mp3" id="10_2luj6"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_4h5et"]
panorama = ExtResource("6_nkuyu")

[sub_resource type="Sky" id="Sky_n8e42"]
sky_material = SubResource("PanoramaSkyMaterial_4h5et")

[sub_resource type="Environment" id="Environment_qypbh"]
background_mode = 2
sky = SubResource("Sky_n8e42")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bakio"]
render_priority = 0
shader = ExtResource("3_chnun")

[sub_resource type="PlaneMesh" id="PlaneMesh_rm1pt"]
material = SubResource("ShaderMaterial_bakio")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4rh7"]
bg_color = Color(0.129412, 0, 0, 0.686275)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.129412, 0, 0, 0.686275)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1dtc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7aym"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5an22"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nq5j4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6y3pj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_b7mht")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1366.0
offset_bottom = 768.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1366, 768)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_qypbh")

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.790091, 0.61299, 0, -0.61299, 0.790091, 0, 5.08075, 24.8492)
current = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Camera3D"]
transform = Transform3D(30, 0, 0, 0, 15, -25.9808, 0, 25.9808, 15, 0, 15.3, -9.87307)
mesh = SubResource("PlaneMesh_rm1pt")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]

[node name="Main" parent="SubViewportContainer/SubViewport" instance=ExtResource("7_15tsw")]
process_mode = 4

[node name="Credits" parent="." instance=ExtResource("5_dq443")]
visible = false

[node name="Controls" parent="." instance=ExtResource("8_r32lb")]
visible = false

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1366.0
offset_bottom = 768.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.447059, 0.478431, 1, 0.631373)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(337, 277)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_i5jbs")

[node name="Character" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 683.0
offset_top = 27.0
offset_right = 1383.0
offset_bottom = 727.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Character"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
scaling_3d_scale = 0.38
size = Vector2i(700, 700)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Character/SubViewport"]
transform = Transform3D(0.974327, -0.0214534, 0.224114, -0.0290397, 0.975159, 0.219596, -0.223257, -0.220467, 0.9495, 0.424308, 1.28115, 1.64797)
current = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Character/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.997883, -0.0650371, 0, 0.0650371, 0.997883, 0, 0, 0)

[node name="SophiaSkin" parent="Character/SubViewport" instance=ExtResource("1_l3jwp")]

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 430.0
offset_right = 520.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxFlat_o4rh7")

[node name="Interacao" type="Button" parent="."]
layout_mode = 0
offset_left = 898.0
offset_top = 177.0
offset_right = 1148.0
offset_bottom = 677.0
theme_override_styles/focus = SubResource("StyleBoxFlat_k1dtc")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_m7aym")
theme_override_styles/hover = SubResource("StyleBoxFlat_5an22")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nq5j4")
theme_override_styles/normal = SubResource("StyleBoxFlat_6y3pj")
button_mask = 7

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = 450.0
offset_right = 503.0
offset_bottom = 698.0
grow_vertical = 2
alignment = 1

[node name="btnJogar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.776471, 0.619608, 0.709804)
theme_override_fonts/font = ExtResource("1_ug4lg")
theme_override_font_sizes/font_size = 50
text = "Jogar"

[node name="btnControles" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.776471, 0.619608, 0.709804)
theme_override_fonts/font = ExtResource("1_ug4lg")
theme_override_font_sizes/font_size = 50
text = "Controles"

[node name="btnCreditos" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.776471, 0.619608, 0.709804)
theme_override_fonts/font = ExtResource("1_ug4lg")
theme_override_font_sizes/font_size = 50
text = "Cr√©ditos"

[node name="btnSair" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 0.792157)
theme_override_fonts/font = ExtResource("1_ug4lg")
theme_override_font_sizes/font_size = 50
text = "Sair"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_2luj6")
autoplay = true

[connection signal="pressed" from="Interacao" to="Character/SubViewport/SophiaSkin" method="_on_interacao_pressed"]
[connection signal="pressed" from="VBoxContainer/btnJogar" to="." method="_on_btn_jogar_pressed"]
[connection signal="pressed" from="VBoxContainer/btnControles" to="." method="_on_btn_controles_pressed"]
[connection signal="pressed" from="VBoxContainer/btnCreditos" to="." method="_on_btn_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/btnSair" to="." method="_on_btn_sair_pressed"]
